<resources>
    <string name="app_name">CVN</string>
    <string name="homeFragment">Home</string>
    <string name="newsFragment">Новости</string>
    <string name="details_fragment">Details Fragment</string>
    <string name="favoriteFragment">Избранное</string>
    <string name="common_symptoms">Общие симптомы инфекции включают респираторные симптомы, лихорадку, кащель, одыщку и затрудненное дыхание. В более тяжелых случаях инфекция может вызывать пневманию, тяжелый острый респираторный синдром, почечную недостаточность или даже смерть.</string>
    <string name="symptomsFragment">Симптомы</string>
    <string name="helpFragment">Помощь</string>
    <string name="totalCases">Всего подтвержденных случаев</string>
    <string name="tvDied">Умерли</string>
    <string name="tvRecovered">Выздоровели</string>
    <string name="TotalInfected">Всего зараженных</string>
    <string name="totalRecovered">Всего выздоровевших</string>
    <string name="totalDied">Всего Умерло</string>
    <string name="generalStatistics">Общая статистика</string>
    <string name="fever">Горячка</string>
    <string name="dryCough">Сухой кашель</string>
    <string name="fatigue">Усталость</string>
    <string name="mucusFormation">Образование слизи</string>
    <string name="shortnessBreath">Одышка</string>
    <string name="pain">Боль в мышцах и суставах</string>
    <string name="soreThroat">Боль в горле</string>
    <string name="headache">Головная боль</string>
    <string name="fever2">Лихорадка</string>
    <string name="nauseaOrVomiting">Тошнота или рвота</string>
    <string name="theNoseClogged">Засорен нос</string>
    <string name="diarrhea">Понос</string>
    <string name="hemoptysis">Кровохарканье</string>
    <string name="conjunctivitis">Конъюнктивит</string>
    <string name="dryCoughPercent">67.7%</string>
    <string name="fatiguePercent">38.1%</string>
    <string name="mucusFormationPercent">33.4%</string>
    <string name="shortOfBreaPercent">18.6%</string>
    <string name="shortnessOfBreathPercent">14.8%</string>
    <string name="mSoreThroatPercent">13.9%</string>
    <string name="headachePercent">13.6%</string>
    <string name="feverPercent">11.4%</string>
    <string name="nauseaOrVomitingPercent">5.0%</string>
    <string name="theNoseCloggedPercent">4.8%</string>
    <string name="diarrheaPercent">3.7%</string>
    <string name="HemoptysisPercent">0.9%</string>
    <string name="conjunctivitisPercent">0.8%</string>
    <string name="myCountry">Моя страна</string>
    <string name="listOfСountries">Список стран</string>
    <string name="howWillInfected">Как вы заразитесь?</string>
    <string name="tvOne">1.</string>
    <string name="mainPaths">Основными путями передачи являются респираторные капли и тесный контакт</string>
    <string name="tvTwo">2.</string>
    <string name="sneezingOrCoughing">Когда вы чихаете или кашляете из носа и рта, вы капаете жидкие капли.</string>
    <string name="tvThree">3.</string>
    <string name="TransmissionOfInfection">Эти капли могут передавать инфекции и, попадая в глаза, нос или рот, могут вызывать инфекцию. Вот как распространяется грипп и многие вирусы.</string>
    <string name="tvFour">4.</string>
    <string name="mostOften">Чаще всего вы должны быть рядом с человеком (в пределах 2 метров), что бы распространяться таким образом.</string>
    <string name="tvFive">5.</string>
    <string name="possibilityOfTransfer">Существует возможность переноса аэрозоля при воздействии аэрозоля с высокой концентрацией в относительно замкнутой среде.</string>
    <string name="tvSix">6.</string>
    <string name="worldOrganization">Всемирная организация здравоохранения заявила, что риск распространения от кого-то без симптомов очень маленький, а фекальная передача низкая.</string>
    <string name="protection">Как я могу защитить себя?</string>
    <string name="dontTravel">Не путешествуйте в пострадавшие районы.</string>
    <string name="coverYourMouth">При чихании или кашле прикрывайте рот тканью или частью руки, никогда не чихайте и не кашляйте руками.</string>
    <string name="washHands">Часто и тщательно мойте руки с мылом и водой.</string>
    <string name="sickPeople">Избегайте явно больных людей и мест с большим количеством людей.</string>
    <string name="infected">Я думаю, что я заражен, что теперь?</string>
    <string name="notify">Сообщите вашему учреждению / организации здравоохранения в вашей стране через службу экстренной помощи, которая сообщит вам что делать дальше.</string>
    <string name="quarantineAtHome">Карантин в домашних условиях рекомендуется тем, у кого диагностирована инфекция COVID-19, и тем, кто подозревает, что они могут быть заражены.</string>
    <string name="instructions">Органы общественного здравоохранения выпустили инструкции по карантину, которые включают в себя уведомление по телефону для медицинских работнков и ограничения на все виды деятельности вне дома, за исключением оказания медицинской помощи.</string>
    <string name="dontGoToWork">Не ходите на работу, в школу или общественные места. Не используйте общественный транспорт, совместные вождение или услуги такси.</string>
    <string name="traveledToAnotherCountry">Те, которые недавно ездили в страну с широко распространенной передачей или были в прямом контакте с кем-то, у кого диагностировали COVID-19, также были запрошены некоторыми государственными учреждениями здравоохранения, чтобы изолировать или практиковать социальные дистанции в течение 14 дней.</string>
    <string name="relieveSymptoms">Попытки облегчить симптомы могут включать прием лекарств без рецепта, питье жидкости и регулярный отдых. В зависимости от тяжести может потребоваться лечение кислородом, внутривенными жидкостями и респираторной поддержкой.</string>
    <string name="tvSeven">7.</string>
    <string name="steroidUse">Использование стероидов может ухудшить результаты.</string>
    <string name="symptom">Симптомы</string>
    <string name="IThinkInfectedWhatNow">Я думаю что я заражен, что теперь?</string>
    <string name="readInformation">Прочитайте следующую информацию</string>
    <string name="country">Страна:</string>
    <string name="Infestations">Заражения:</string>
    <string name="died">Умерли:</string>
    <string name="recovered">Выздоровело:</string>
    <string name="addToFavorite">Добавить в Избранное</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="twoDaysAgo">2 дня назад</string>
    <string name="all">Всё</string>
    <string name="my_country">Моя страна</string>
    <string name="countries_list">Список стран</string>

</resources>